Modified some part of file 02_data_wrangling.ipynb and commiting the modified file

--- a/Notebooks/02_data_wrangling.ipynb
+++ b/Notebooks/02_data_wrangling.ipynb
@@ -2760,7 +2760,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**A: 2** Silverton Mountain"
+    "**A: 2** Based on above data, it seems for now, 'Silverton Mountain' has incredibly large skiable terrain area."
    ]
   },
   {
@@ -5027,7 +5027,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**A: 3** Your answer here"
+    "**A: 3** \n",
+    "Write a summary statement that highlights the key processes and findings from this notebook. This should include information such as the original number of rows in the data, whether our own resort was actually present etc. \n",
+    "\n",
+    "Original number of rows in the data : 330 rows in original data file'ski_resort_data.csv'.\n",
+    "Our own resort'Big Mountain Resort' was present or not in the intial data : Yes, 'Big Mountain Resort' is present in the original data file 'ski_resort_data.csv'.\n",
+    "\n",
+    "What columns, if any, have been removed? Any rows? Summarise the reasons why. \n",
+    "In intial data file'ski_resort_data.csv' there were total 27 columns and 330 rows.\n",
+    "Out of that, modified data file'ski_data_cleaned.csv' has 25 columns and 277 rows. 2 Columns were removed and 253 rows were removed from original data file'ski_resort_data.csv'.\n",
+    "Dropped 'fastEight' column from original data file'', since \n",
+    "ski_data.drop(columns='fastEight', inplace=True)\n",
+    "\n",
+    "\n",
+    "Were any other issues found? What remedial actions did you take? \n",
+    "\n",
+    "State where you are in the project. \n",
+    "\n",
+    "Can you confirm what the target feature is for your desire to predict ticket price? \n",
+    "\n",
+    "How many rows were left in the data? Hint: this is a great opportunity to reread your notebook, check all cells have been executed in order and from a \"blank slate\" (restarting the kernel will do this), and that your workflow makes sense and follows a logical pattern. As you do this you can pull out salient information for inclusion in this summary. Thus, this section will provide an important overview of \"what\" and \"why\" without having to dive into the \"how\" or any unproductive or inconclusive steps along the way.\n",
+    "Total 277 rows are left in cleaned data file'ski_data_cleaned.csv'.\n"
    ]
   }
  ],
