Modified some part of file 02_data_wrangling.ipynb and commiting the modified file

--- a/Notebooks/02_data_wrangling.ipynb
+++ b/Notebooks/02_data_wrangling.ipynb
@@ -5037,7 +5037,7 @@
     "**What columns, if any, have been removed? Any rows? Summarise the reasons why.** \n",
     "#In intial data file'ski_resort_data.csv' there were total 27 columns and 330 rows.\n",
     "#Out of that, modified data file'ski_data_cleaned.csv' has 25 columns and 277 rows. \n",
-    "#2 Columns were #removed and 253 rows were removed from original data file'ski_resort_data.csv'.\n",
+    "#2 Columns were removed and 53 rows were removed from original data file'ski_resort_data.csv'.\n",
     "\n",
     "#Dropped 'fastEight' column from original data file'ski_resort_data.csv' using following Python code, #since half the values are missing in 'fastEight' column and all but the others are the value zero. #There is essentially no information in 'fastEight' column as mentioned in section'2.6.4.2.3 fastEight'.\n",
     "#ski_data.drop(columns='fastEight', inplace=True)\n",
@@ -5048,7 +5048,7 @@
     "**Were any other issues found? What remedial actions did you take?**\n",
     "\n",
     "**State in the project:**\n",
-    "#As part of this notebook, worked on \"data wrangling\" part of the problem and analysed following #questions and worked on handling these questions within data:\n",
+    "#As part of notebook'02_data_wrangling.ipynb', worked on \"data wrangling\" part of the problem and analysed following #questions and worked on handling these questions within data:\n",
     "#If have the data needed to tackle the desired question mentioned in problem statement slide?\n",
     "#Required target value?\n",
     "#Potentially useful features?\n",
