--- a/Notebooks/02_data_wrangling.ipynb
+++ b/Notebooks/02_data_wrangling.ipynb
@@ -5032,7 +5032,9 @@
     "\n",
     "**Write a summary statement that highlights the key processes and findings from this notebook. This should include information such as the original number of rows in the data, whether our own resort was actually present etc.** \n",
     "#Original number of rows in the data : 330 rows in original data file'ski_resort_data.csv'.\n",
-    "#Yes, 'Big Mountain Resort' #is present in the original data file 'ski_resort_data.csv'.\n",
+    "#Yes,'Big Mountain Resort' #is present in the original data file 'ski_resort_data.csv'.\n",
+    "\n",
+    "\n",
     "\n",
     "**What columns, if any, have been removed? Any rows? Summarise the reasons why.** \n",
     "#In intial data file'ski_resort_data.csv' there were total 27 columns and 330 rows.\n",
@@ -5044,17 +5046,63 @@
     "\n",
     "\n",
     "\n",
-    "\n",
     "**Were any other issues found? What remedial actions did you take?**\n",
+    "1)\tThere are two types of ticket price. AdultWeekday is the price of an adult weekday ticket. AdultWeekend is the price of an adult weekend ticket.\n",
+    "Dropped rows with no price data using following Python code:\n",
+    "ski_data = ski_data[missing_price != 2]\n",
+    "Weekend prices have the least missing values of the two, so dropped the weekday prices and then keep just the rows that have weekend price.\n",
+    "2)\tLot of fields have missing as shown the % of missing values here:\n",
+    "However, how useful the missing features are in predicting ticket price. Due to this, just didn’t dropped rows that are missing several useless features.\n",
+    "\n",
+    "Field Name\t%\n",
+    "yearsOpen\t1\n",
+    "SkiableTerrain_ac\t3\n",
+    "Runs\t4\n",
+    "LongestRun_mi\t5\n",
+    "averageSnowfall\t14\n",
+    "Snow Making_ac\t46\n",
+    "projectedDaysOpen\t47\n",
+    "TerrainParks\t51\n",
+    "daysOpenLastYear\t51\n",
+    "AdultWeekend\t51\n",
+    "AdultWeekday\t54\n",
+    "NightSkiing_ac\t143\n",
+    "fastEight\t166\n",
+    "\n",
+    "\n",
+    "3)\tisnull() is not the only indicator of missing data. Sometimes 'missingness' can be encoded, perhaps by a -1 or 999. Such values are typically chosen because they are \"obviously\" not genuine values. If you were capturing data on people's heights and weights but missing someone's height, you could certainly encode that as a 0 because no one has a height of zero (in any units). Yet such entries would not be revealed by isnull(). Here, you need a data dictionary and/or to spot such values as part of looking for outliers. Someone with a height of zero should definitely show up as an outlier!\n",
+    "4)\t'Silverton Mountain' has incredibly large skiable terrain area : Analyzed it further and found that, its incorrect, using following Python code, assigned correct value to it:\n",
+    "#Used the .loc accessor again to modify this value with the correct value of 1819\n",
+    "ski_data.loc[39, 'SkiableTerrain_ac'] = 1819\n",
+    "5)\t‘Heavenly Mountain Resort’ has incorrect skiable terrain area, however, noticed there is no ticket pricing information at all for this resort. Any further effort spent worrying about values for this resort will be wasted. Will be dropping the entire row.\n",
+    "6)\tExcluded, incorrect ‘yearsOpen’ value, using following Python code:\n",
+    "ski_data[ski_data['yearsOpen'] < 1000].hist(bins=30)\n",
+    "plt.xlabel('Years open')\n",
+    "plt.ylabel('Count')\n",
+    "plt.title('Distribution of years open excluding 2019');\n",
+    "7)\tCreated ‘state_summary’ data frame of summary statistics for various states, joined ‘state_summary’ data frame with the ski resort(‘ski_data’) data to augment it with additional data.\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "**State in the project:**\n",
-    "#As part of notebook'02_data_wrangling.ipynb', worked on \"data wrangling\" part of the problem and analysed following #questions and worked on handling these questions within data:\n",
+    "#As part of notebook'02_data_wrangling.ipynb', worked on \"data wrangling and data cleaning\" part of the problem and analysed following questions and worked on handling these questions within data:\n",
     "#If have the data needed to tackle the desired question mentioned in problem statement slide?\n",
     "#Required target value?\n",
     "#Potentially useful features?\n",
     "#Are there any fundamental issues with the data?\n",
     "\n",
+    "\n",
+    "\n",
     "**Can you confirm what the target feature is for your desire to predict ticket price?** \n",
+    "Features are:\n",
+    "•\tTerrainParks\n",
+    "•\tSkiableTerrain_ac\n",
+    "•\tdaysOpenLastYear\n",
+    "•\tNightSkiing_ac\n",
+    "These are features it makes sense to sum: the total number of terrain parks, the total skiable area, the total number of days open, and the total area available for night skiing. \n",
+    "\n",
+    "\n",
     "\n",
     "**How many rows were left in the data? Hint: this is a great opportunity to reread your notebook, check all cells have been executed in order and from a \"blank slate\" (restarting the kernel will do this), and that your workflow makes sense and follows a logical pattern. As you do this you can pull out salient information for inclusion in this summary. Thus, this section will provide an important overview of \"what\" and \"why\" without having to dive into the \"how\" or any unproductive or inconclusive steps along the way.**\n",
     "#Total 277 rows are left in cleaned data file'ski_data_cleaned.csv'.\n"
