Updated file 04_preprocessing_and_training.ipynb' and commiting the changes to github

--- a/Notebooks/04_preprocessing_and_training.ipynb
+++ b/Notebooks/04_preprocessing_and_training.ipynb
@@ -4955,11 +4955,11 @@
     "#and get it to use 5-fold cross-validation\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.preprocessing import StandardScaler  # Assuming you need preprocessing\n",
+    "from sklearn.preprocessing import StandardScaler  \n",
     "\n",
     "# Define the pipeline with a random forest regressor\n",
     "rf_pipeline = Pipeline([\n",
-    "    ('scaler', StandardScaler()),  # Optional preprocessing step\n",
+    "    ('scaler', StandardScaler()),  \n",
     "    ('rf', RandomForestRegressor(random_state=47))  # Random forest with fixed random state\n",
     "])\n",
     "\n",
@@ -5085,14 +5085,7 @@
     "#Code task 24#\n",
     "#Call `GridSearchCV` with the random forest pipeline, passing in the above `grid_params`\n",
     "#dict for parameters to evaluate, 5-fold cross-validation, and all available CPU cores (if desired)\n",
-    "rf_grid_cv = GridSearchCV(rf_pipeline, param_grid=grid_params, cv=5, n_jobs=-1)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "rf_grid_cv = GridSearchCV(rf_pipeline, param_grid=grid_params, cv=5, n_jobs=-1)\n"
    ]
   },
   {
@@ -5561,10 +5554,6 @@
     "#to actually start the grid search. This may take a minute or two.\n",
     "# There are two ways to fix this issue:\n",
     "\n",
-    "\n",
-    "\n",
-    "# Option 2: Modify the pipeline to include RandomForestRegressor instead of LinearRegression\n",
-    "# First, import RandomForestRegressor if not already imported\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "\n",
     "# Redefine the pipeline with RandomForestRegressor\n",
@@ -5572,7 +5561,7 @@
     "    ('simpleimputer', SimpleImputer(strategy='median')),\n",
     "    ('standardscaler', StandardScaler()),\n",
     "    ('selectkbest', SelectKBest(score_func=f_regression)),\n",
-    "    ('rf', RandomForestRegressor())  # Changed from 'linearregression' to 'rf'\n",
+    "    ('rf', RandomForestRegressor())  \n",
     "])\n",
     "\n",
     "# Keep the original param_grid since it's now valid\n",
