Updated file 04_preprocessing_and_training.ipynb' and commiting the changes to github

--- a/Notebooks/04_preprocessing_and_training.ipynb
+++ b/Notebooks/04_preprocessing_and_training.ipynb
@@ -4787,7 +4787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [
     {
@@ -5552,7 +5552,7 @@
     "#Code task 25#\n",
     "#Now call the `GridSearchCV`'s `fit()` method with `X_train` and `y_train` as arguments\n",
     "#to actually start the grid search. This may take a minute or two.\n",
-    "# There are two ways to fix this issue:\n",
+    "\n",
     "\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "\n",
@@ -5603,14 +5603,7 @@
    "source": [
     "#Code task 26#\n",
     "#Print the best params (`best_params_` attribute) from the grid search\n",
-    "rf_grid_cv.best_params_\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "rf_grid_cv.best_params_\n"
    ]
   },
   {
