--- a/Notebooks/05_modeling.ipynb
+++ b/Notebooks/05_modeling.ipynb
@@ -1776,7 +1776,71 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**A: 1** Your answer here"
+    "**A: 1** \n",
+    "Summary:\n",
+    "\n",
+    "1.\tWrite a summary of the results of modeling these scenarios. Start by starting the current position; how much does Big Mountain currently charge?\n",
+    "Big Mountain currently charge $81.00 for ticket.\n",
+    "\n",
+    "2.\t What does your modelling suggest for a ticket price that could be supported in the marketplace by Big Mountain's facilities? \n",
+    "Using following Python codes, predicted the Big Mountain ticket price $90.50:\n",
+    "X_bm = ski_data.loc[ski_data.Name == \"Big Mountain Resort\", model.X_columns]\n",
+    "y_bm = ski_data.loc[ski_data.Name == \"Big Mountain Resort\", 'AdultWeekend']\n",
+    "\n",
+    "bm_pred = model.predict(X_bm).item()\n",
+    "y_bm = y_bm.values.item()\n",
+    "print(f'Big Mountain Resort modelled price is ${bm_pred:.2f}, actual price is ${y_bm:.2f}.')\n",
+    "print(f'Even with the expected mean absolute error of ${mae_mean:.2f}, this suggests there is room for an increase.')\n",
+    "\n",
+    "Output:\n",
+    "Big Mountain Resort modelled price is $90.50, actual price is $81.00.\n",
+    "\n",
+    "3.\tHow would you approach suggesting such a change to the business leadership? \n",
+    "Updated ticket price to $90.50 is proposed based on other resort features and ticket price variation.\n",
+    "\n",
+    "Here is valuable business intelligence of our model:\n",
+    "\n",
+    "\n",
+    "1.\tPermanently closing down up to 10 of the least used runs. This doesn't impact any other resort statistics.\n",
+    "2.\tIncrease the vertical drop by adding a run to a point 150 feet lower down but requiring the installation of an additional chair lift to bring skiers back up, without additional snow making coverage\n",
+    "3.\tSame as number 2, but adding 2 acres of snow making cover\n",
+    "4.\tIncrease the longest run by 0.2 mile to boast 3.5 miles length, requiring an additional snow making coverage of 4 acres\n",
+    "\n",
+    "\n",
+    "4.\tDiscuss the additional operating cost of the new chair lift per ticket (on the basis of each visitor on average buying 5 day tickets) in the context of raising prices to cover this. For future improvements, state which, if any, of the modeled scenarios you'd recommend for further consideration. \n",
+    "In this scenario, Big Mountain is adding a run, increasing the vertical drop by 150 feet, and installing an additional chair lift.\n",
+    "Python code to support:\n",
+    "#Code task 4#\n",
+    "#Call `predict_increase` with a list of the features 'Runs', 'vertical_drop', and 'total_chairs'\n",
+    "#and associated deltas of 1, 150, and 1\n",
+    "ticket2_increase = predict_increase(['Runs', 'vertical_drop', 'total_chairs'], [1, 150, 1])\n",
+    "\n",
+    "print(f'This scenario increases support for ticket price by ${ticket2_increase:.2f}')\n",
+    "print(f'Over the season, this could be expected to amount to ${revenue2_increase:.0f}')\n",
+    "Output:\n",
+    "This scenario increases support for ticket price by $0.65\n",
+    "Over the season, this could be expected to amount to $1137500\n",
+    "\n",
+    "5.\tSuggest how the business might test, and progress, with any run closures.\n",
+    "                Close up to 10 of the least used runs. The number of runs is the only parameter varying.\n",
+    "Python code:\n",
+    "#Code task 3#\n",
+    "#Create two plots, side by side, for the predicted ticket price change (delta) for each\n",
+    "#condition (number of runs closed) in the scenario and the associated predicted revenue\n",
+    "#change on the assumption that each of the expected visitors buys 5 tickets\n",
+    "#There are two things to do here:\n",
+    "#1 - use a list comprehension to create a list of the number of runs closed from `runs_delta`\n",
+    "#2 - use a list comprehension to create a list of predicted revenue changes from `price_deltas`\n",
+    "runs_closed = [-1 * i for i in runs_delta] #1\n",
+    "fig, ax = plt.subplots(1, 2, figsize=(10, 5))\n",
+    "fig.subplots_adjust(wspace=0.5)\n",
+    "ax[0].plot(runs_closed, price_deltas, 'o-')\n",
+    "ax[0].set(xlabel='Runs closed', ylabel='Change ($)', title='Ticket price')\n",
+    "revenue_deltas = [5 * expected_visitors * i for i in price_deltas] #2\n",
+    "ax[1].plot(runs_closed, revenue_deltas, 'o-')\n",
+    "ax[1].set(xlabel='Runs closed', ylabel='Change ($)', title='Revenue');\n",
+    "\n",
+    "The model says closing one run makes no difference. Closing 2 and 3 successively reduces support for ticket price and so revenue. If Big Mountain closes down 3 runs, it seems, may as well close down 4 or 5 as there's no further loss in ticket price. Increasing the closures down to 6 or more leads to a large drop.\n"
    ]
   },
   {
@@ -1797,7 +1861,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**A: 2** Your answer here"
+    "**A: 2** \n",
+    "Further work:\n",
+    "\n",
+    "\n",
+    "6.\tWhat next? Highlight any deficiencies in the data that hampered or limited this work. The only price data in our dataset were ticket prices. You were provided with information about the additional operating cost of the new chair lift, but what other cost information would be useful? \n",
+    "Some of the data was missing in the original file that was provided, would be good to have more data and data that does not have missing values.\n",
+    "\n",
+    "7.\tBig Mountain was already fairly high on some of the league charts of facilities offered, but why was its modeled price so much higher than its current price?\n",
+    "Big Mountain Resort In Market Context points out Big Mountain’s following outstanding features that promotes ticket price increase for Big Mountain:\n",
+    "\n",
+    "Big Mountain has good vertical drop feature, however there are still quite a few other resorts with a greater drop.\n",
+    "Big Mountain is very high up the league table of snow making area compare to other resorts.\n",
+    "Big Mountain has amongst the highest number of total chairs, other resorts with more chairs appear to be outliers.\n",
+    "Most resorts have no fast quads. Big Mountain has 3, which puts it high up that league table. There are some values much higher, but they are rare.\n",
+    "Big Mountain compares well for the number of runs. There are some resorts with more, but not many.\n",
+    "Big Mountain has one of the longest runs. Although it is just over half the length of the longest, the longer ones are rare.\n",
+    "The vast majority of resorts, such as Big Mountain, have no trams.\n",
+    "Big Mountain is amongst the resorts with the largest amount of skiable terrain.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "8.\t Would this mismatch come as a surprise to the business executives? How would you find out? \n",
+    "By providing demo to business executives and then getting their views can tell, what opinion Big Mountain business executives have about this proposal of ticket price increase.\n",
+    "\n",
+    "9.\tAssuming the business leaders felt this model was useful, how would the business make use of it?\n",
+    "Business can increase ticket price based on the ticket price prediction model of $90.50.\n",
+    "\n",
+    "Here is valuable business intelligence of our model/action items:\n",
+    "\n",
+    "\n",
+    "5.\tPermanently closing down up to 10 of the least used runs. This doesn't impact any other resort statistics.\n",
+    "6.\tIncrease the vertical drop by adding a run to a point 150 feet lower down but requiring the installation of an additional chair lift to bring skiers back up, without additional snow making coverage\n",
+    "7.\tSame as number 2, but adding 2 acres of snow making cover\n",
+    "8.\tIncrease the longest run by 0.2 mile to boast 3.5 miles length, requiring additional snow making coverage of 4 acres\n",
+    "\n",
+    "\n",
+    "10.\t Would you expect them to come to you every time they wanted to test a new combination of parameters in a scenario? We hope you would have better things to do, so how might this model be made available for business analysts to use and explore?\n",
+    "Business analysts will be provided with the detail of this model/Python code detail and can experiment themselves for newer future uses.\n"
    ]
   }
  ],
