--- a/Notebooks/03_exploratory_data_analysis.ipynb
+++ b/Notebooks/03_exploratory_data_analysis.ipynb
@@ -3973,11 +3973,15 @@
    "metadata": {},
    "source": [
     "**A: 1** \n",
-    "•\t**Write a summary of the exploratory data analysis above.** \n",
+    "•\t**Write a summary of the exploratory data analysis above.**\n",
+    "\n",
     "As part of exploratory data analysis worked on following:\n",
     "a.\tAnalyzed variables and relationships between variables using summary statistics and data visualization using different types of plots.\n",
     "b.\tCleaned and transformed data file to use further in the latest file’data/ski_data_cleaned.csv’.\n",
+    "\n",
+    "\n",
     "•\t**What numerical or categorical features were in the data?** \n",
+    "\n",
     "“Ski_data” dataframe, numerical features:\n",
     "summit_elev , vertical_drop  , base_elev   , trams, fastSixes, fastQuads, quad, triple, double, surface, total_chairs, Runs, TerrainParks, LongestRun_mi, SkiableTerrain_ac, Snow Making_ac, daysOpenLastYear, yearsOpen, averageSnowfall, AdultWeekend, projectedDaysOpen, NightSkiing_ac     \n",
     " “Ski_data” dataframe, categorical features:\n",
@@ -3987,9 +3991,14 @@
     "“state_summary” dataframe, categorical features:\n",
     "state\n",
     "\n",
+    "\n",
     "•\t**Was there any pattern suggested of a relationship between state and ticket price?** \n",
+    "\n",
     "Doesn’t seem, there is any pattern suggesting relationship between particular state and ticket price. In the modified data file \"ski_data_step3_features.csv\" after all steps in '03_exploratory_data_analysis.ipynb', state is being sued as label to identify state only.\n",
+    "\n",
+    "\n",
     "•\t**What did this lead us to decide regarding which features to use in subsequent modeling?** \n",
+    "\n",
     "Dropped columns 'state_population', 'state_area_sq_miles' from ‘state_summary’ dataframe using following Python code, and used 'resorts_per_100kcapita' and 'resorts_per_100ksq_mile' instead of these columns.\n",
     "state_summary['resorts_per_100kcapita'] = 100_000 * state_summary.resorts_per_state / state_summary.state_population\n",
     "state_summary['resorts_per_100ksq_mile'] = 100_000 * state_summary.resorts_per_state / state_summary.state_area_sq_miles\n",
@@ -4006,7 +4015,10 @@
     "ski_data.drop(columns=['state_total_skiable_area_ac', 'state_total_days_open', \n",
     "                       'state_total_terrain_parks', 'state_total_nightskiing_ac'], inplace=True)\n",
     "\n",
+    "                       \n",
+    "\n",
     "•\t**What aspects of the data (e.g. relationships between features) should you remain wary of when you come to perform feature selection for modeling?** \n",
+    "\n",
     "There is some positive correlation between the ratio of night skiing area with the number of resorts per capita. In other words, it seems that when resorts are more densely located with population, more night skiing is provided.\n",
     "resort_night_skiing_state_ratio seems the most correlated with ticket price.\n",
     "Snow Making_ac. Visitors seem to value more guaranteed snow, which would cost in terms of snow making equipment, which would drive prices and costs up.\n",
@@ -4017,6 +4029,8 @@
     "             People seem to put more value in guaranteed snow cover rather than more \n",
     "             variable terrain area.\n",
     "             The vertical drop seems to be a selling point that raises ticket prices as well.\n",
+    "\n",
+    "             \n",
     "\n",
     "•\tTwo key points that must be addressed are the choice of target feature for your modelling and how, if at all, you're going to handle the states labels in the data.\n",
     "\n",
@@ -4044,7 +4058,9 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
